tests/snapshots/codegen_tests__complex_types.snap
---
source: tests/codegen_tests.rs
expression: types
---
// SPDX-License-Identifier: AGPL-3.0-or-later
// Generated by rescript-openapi - DO NOT EDIT
// Source: Complex API v2.0.0

type cat = {
  name: string,
  /** How loud the cat meows (1-10) */
  meowVolume: int,
}

type dog = {
  name: string,
  /** The pitch of the dog's bark */
  barkPitch: [#"low" | #"medium" | #"high"],
}

type emailNotification = {
  @as("type") type_: [#"email"],
  @as("to") to_: string,
  subject: string,
  body: string,
  html: option<bool>,
}

type error = {
  code: string,
  message: string,
  details: option<array<JSON.t>>,
}

type event = {
  id: string,
  @as("type") type_: [#"user.created" | #"user.updated" | #"user.deleted" | #"order.placed"],
  timestamp: string,
  payload: JSON.t,
}

type orderEventPayload = {
  orderId: string,
  amount: float,
  currency: option<string>,
}

type paginationMeta = {
  total: int,
  limit: int,
  offset: int,
  hasMore: option<bool>,
}

type pushNotification = {
  @as("type") type_: [#"push"],
  deviceToken: string,
  title: string,
  message: string,
  badge: option<int>,
  sound: option<string>,
}

type smsNotification = {
  @as("type") type_: [#"sms"],
  phoneNumber: string,
  message: string,
}

type userEventPayload = {
  userId: string,
  changes: option<JSON.t>,
}

type userProfile = {
  firstName: string,
  lastName: string,
  avatar: option<string>,
  bio: option<string>,
  socialLinks: option<JSON.t>,
}

type userSettings = {
  theme: option<[#"light" | #"dark" | #"system"]>,
  language: option<string>,
  notifications: option<JSON.t>,
}

type pet =
  | Cat(cat)
  | Dog(dog)

type notification =
  | EmailNotification(emailNotification)
  | PushNotification(pushNotification)
  | SmsNotification(smsNotification)

type createUserRequest = {
  email: string,
  password: string,
  profile: userProfile,
  settings: option<userSettings>,
}

type user = {
  id: string,
  email: string,
  profile: userProfile,
  settings: option<userSettings>,
  createdAt: option<string>,
  updatedAt: option<string>,
}

type searchResult =
  | User(user)
  | OrderEventPayload(orderEventPayload)
  | TextMatch(JSON.t)
